<resources>
    <string name="app_name">Github</string>
    <string name="hello_blank_fragment">hello_blank_fragment</string>
    <string name="menu_love">menu_love</string>
    <string name="search_view">search_view</string>
    <string name="search_hint">search user</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="_50">50</string>
    <string name="followers">Followers</string>
    <string name="_20">20</string>
    <string name="following">Following</string>
    <string name="_10">10</string>
    <string name="repository">Repository</string>
    <string name="location">Location</string>
    <string name="company">Company</string>
    <string name="user_not_found">user not found</string>
</resources>