<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.activity.DetailUserActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_detail"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_btn"
        tools:src="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/back_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <TextView
        android:id="@+id/number_of_follower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/_50"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/image_detail"
        app:layout_constraintEnd_toStartOf="@+id/number_of_following"
        app:layout_constraintStart_toEndOf="@+id/image_detail"
        app:layout_constraintTop_toTopOf="@+id/image_detail" />

    <TextView
        android:id="@+id/followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/followers"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/number_of_follower"
        app:layout_constraintStart_toStartOf="@+id/number_of_follower"
        app:layout_constraintTop_toBottomOf="@+id/number_of_follower" />

    <TextView
        android:id="@+id/number_of_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"

        tools:text="@string/_20"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/number_of_repository"
        app:layout_constraintTop_toTopOf="@+id/number_of_follower" />

    <TextView
        android:id="@+id/following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/following"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/followers"
        app:layout_constraintEnd_toEndOf="@+id/number_of_following"
        app:layout_constraintStart_toStartOf="@+id/number_of_following"
        app:layout_constraintTop_toBottomOf="@+id/number_of_following" />

    <TextView
        android:id="@+id/number_of_repository"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        tools:text="@string/_10"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/number_of_following" />

    <TextView
        android:id="@+id/fepository"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/repository"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/following"
        app:layout_constraintEnd_toEndOf="@+id/number_of_repository"
        app:layout_constraintStart_toStartOf="@+id/number_of_repository"
        app:layout_constraintTop_toBottomOf="@+id/number_of_repository" />

    <LinearLayout
        android:id="@+id/bio_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/image_detail">

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="24dp"
            tools:text="@string/username"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="24dp"
            tools:text="@string/name"
            android:textColor="@color/gray"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/tv_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/company"
            android:paddingStart="24dp"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimary"
            app:tabSelectedTextColor="@color/white"
            app:tabTextColor="@android:color/white" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/bio_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>